# sphinx-literalizer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  README.md  README.rst  conftest.py  pyproject.toml  setup.py  spelling_private_dict.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  publish-site.yml  release.yml
docs/source/: api-reference.rst  conf.py  contributing.rst  heterogeneous-strategies.rst  index.rst  pyrightconfig.json  spelling_wordlist.txt
docs/source/_examples/: auto_record.json  calls.json  calls_go.json  calls_heterogeneous.json  calls_json.json  literal.json  mixed_scalars.json  nested_tuple.yaml  no_args.yaml  record.json  record_nested_maps.json  tuple.json
newsfragments/: +bump-literalizer-2026.5.28.change.rst  +bump-literalizer-2026.7.14.change.rst  +literalizer-2026.7.24.1.change  241.change.rst  252.change.rst  325.change  330.change.rst  331.change.rst  332.change.rst  340.change  345.change.rst  347.change  348.change  352.change  358.change  literalizer-2026.5.20.1.change.rst  literalizer-2026.5.21.change.rst
src/sphinx_literalizer/: __init__.py
tests/: __init__.py  test_extension.py  test_optional_enum_cls.py
