[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm>=8.1.0",
]

[project]
name = "sphinx-literalizer"
description = "Sphinx extension for literalizer — convert JSON to native language literals"
readme = { file = "README.rst", content-type = "text/x-rst" }
keywords = [
    "extension",
    "json",
    "literal",
    "literalizer",
    "sphinx",
]
license = "MIT"
authors = [
    { name = "Adam Dangoor", email = "adamdangoor@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]
dependencies = [
    "literalizer",
    "sphinx>=7.0",
]
optional-dependencies.dev = [
    "beartype==0.22.9",
    "furo==2025.12.19",
    "prek==0.3.5",
    "pyproject-fmt==2.18.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.6",
    "sphinx==9.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-pyproject==0.3.0",
    "sphinx-substitution-extensions==2026.1.12",
]
optional-dependencies.release = [
    "check-wheel-contents==0.6.3",
]
urls.Documentation = "https://adamtheturtle.github.io/sphinx-literalizer/"
urls.Source = "https://github.com/adamtheturtle/sphinx-literalizer"

[tool.setuptools]
zip-safe = false
package-data.sphinx_literalizer = [
    "py.typed",
]
packages.find.where = [
    "src",
]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.ruff]
line-length = 79
lint.select = [
    "ALL",
]
lint.ignore = [
    "COM812",
    "D205",
    "D212",
    "ISC001",
]
lint.per-file-ignores."src/sphinx_literalizer/__init__.py" = [
    "ARG001",
]
lint.per-file-ignores."tests/test_*.py" = [
    "D103",
    "D205",
    "E501",
    "PLR2004",
    "S101",
]
lint.unfixable = [
    "ERA001",
]
lint.mccabe.max-complexity = 12
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.pytest]
ini_options.xfail_strict = true
ini_options.log_cli = true

[tool.coverage]
run.branch = true
report.exclude_also = [
    "if TYPE_CHECKING:",
]
report.show_missing = true
