[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm>=8.1.0",
]

[project]
name = "sphinx-literalizer"
description = "Sphinx extension for literalizer — convert JSON to native language literals"
readme = { file = "README.rst", content-type = "text/x-rst" }
keywords = [
    "extension",
    "json",
    "literal",
    "literalizer",
    "sphinx",
]
license = "MIT"
authors = [
    { name = "Adam Dangoor", email = "adamdangoor@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Sphinx :: Extension",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]
dependencies = [
    "docutils",
    "literalizer==2026.3.19",
    "sphinx>=7.0",
]
optional-dependencies.dev = [
    "actionlint-py==1.7.11.24",
    "beartype==0.22.9",
    "check-manifest==0.51",
    "deptry==0.24.0",
    "doc8==2.0.0",
    "doccmd==2026.3.2",
    "furo==2025.12.19",
    "interrogate==1.7.0",
    "mypy==1.19.1",
    "mypy-strict-kwargs==2026.1.12",
    "prek==0.3.6",
    "pydocstringformatter==0.7.5",
    "pyproject-fmt==2.20.0",
    "pyrefly==0.57.1",
    "pyright==1.1.408",
    "pyroma==5.0.1",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.15.7",
    "shellcheck-py==0.11.0.1",
    "shfmt-py==3.12.0.2",
    "sphinx==9.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-lint==1.0.2",
    "sphinx-pyproject==0.3.0",
    "sphinx-substitution-extensions==2026.1.12",
    "sphinxcontrib-spelling==8.0.2",
    "ty==0.0.23",
    "types-docutils==0.22.3.20260316",
    "vulture==2.15",
    "yamlfix==1.19.1",
    "zizmor==1.23.1",
]
optional-dependencies.release = [
    "check-wheel-contents==0.6.3",
]
urls.Documentation = "https://adamtheturtle.github.io/sphinx-literalizer/"
urls.Source = "https://github.com/adamtheturtle/sphinx-literalizer"

[tool.setuptools]
zip-safe = false
package-data.sphinx_literalizer = [
    "py.typed",
]
packages.find.where = [
    "src",
]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.ruff]
line-length = 79
lint.select = [
    "ALL",
]
lint.ignore = [
    "COM812",
    "D205",
    "D212",
    "ISC001",
]
lint.per-file-ignores."**/doccmd_*.py" = [
    # Allow standalone expressions (e.g. showing a list value in docs).
    "B018",
    # Allow missing module docstrings in generated doccmd files.
    "D100",
    # Allow our chosen docstring line-style
    "D200",
    # Allow commented-out example output in documentation code blocks.
    "ERA001",
    # Allow asserts in docs.
    "S101",
]
lint.per-file-ignores."tests/test_*.py" = [
    "D103",
    "D205",
    "E501",
    "PLR2004",
    "S101",
]
lint.unfixable = [
    "ERA001",
]
lint.mccabe.max-complexity = 12
lint.pydocstyle.convention = "google"

[tool.check-manifest]
ignore = [
    ".gitattributes",
    ".pre-commit-config.yaml",
    "uv.lock",
    ".vscode/*.json",
    "conftest.py",
    "CHANGELOG.rst",
    "CODE_OF_CONDUCT.rst",
    "CONTRIBUTING.rst",
    "LICENSE",
    "Makefile",
    "ci",
    "ci/**",
    "docs",
    "docs/**",
    ".git_archival.txt",
    "spelling_private_dict.txt",
    "tests",
    "tests/**",
    "zizmor.yml",
]

[tool.deptry]
pep621_dev_dependency_groups = [
    "dev",
    "release",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.mypy]
strict = true
files = [ "." ]
exclude = [
    "build",
]
plugins = [ "mypy_strict_kwargs" ]
follow_untyped_imports = true

[tool.pyrefly]
project_excludes = [
    "build",
]

[tool.pyright]
enableTypeIgnoreComments = false
exclude = [
    ".venv",
]
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"

[tool.ty]
analysis.respect-type-ignore-comments = false
terminal.error-on-warning = true

[tool.pytest]
ini_options.xfail_strict = true
ini_options.log_cli = true

[tool.coverage]
run.branch = true
report.exclude_also = [
    "if TYPE_CHECKING:",
]
report.show_missing = true

[tool.doc8]
max_line_length = 2000
ignore_path = [
    "./.eggs",
    "./docs/build",
    "./docs/build/spelling/output.txt",
    "./node_modules",
    "./src/*.egg-info/",
    "./src/*/_setuptools_scm_version.txt",
]

[tool.interrogate]
fail-under = 100
omit-covered-files = true
verbose = 2

[tool.pydocstringformatter]
write = true
split-summary-body = false
max-line-length = 75
linewrap-full-docstring = true

[tool.vulture]
ignore_names = [
    # pytest configuration
    "pytest_collection_modifyitems",
    "pytest_plugins",
    # pytest fixtures - we name fixtures like this for this purpose
    "fixture_*",
    # Sphinx directive attributes and methods
    "has_content",
    "option_spec",
    "required_arguments",
    "run",
    # Sphinx
    "autoclass_content",
    "autodoc_member_order",
    "copybutton_exclude",
    "extensions",
    "html_show_copyright",
    "html_show_sourcelink",
    "html_show_sphinx",
    "html_theme",
    "html_theme_options",
    "html_title",
    "htmlhelp_basename",
    "intersphinx_mapping",
    "language",
    "linkcheck_ignore",
    "linkcheck_retries",
    "master_doc",
    "nitpicky",
    "project_copyright",
    "pygments_style",
    "rst_prolog",
    "source_suffix",
    "spelling_word_list_filename",
    "templates_path",
    "warning_is_error",
]
exclude = [
    ".venv",
    "build",
]

[tool.yamlfix]
section_whitelines = 1
whitelines = 1
